--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
 
 .wrapper {
@@ -32,6 +34,36 @@
     border-radius: 50%;
     position: absolute;
     box-shadow: inset 0px 0px 50px 40px rgba(0, 0, 0, .9);
+}
+
+.object {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.object span {
+    display: block;
+    padding: 5px 10px;
+    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 1);
+    border-radius: 20px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.object span:hover {
+    background-color: rgba(255, 255, 0, .5);
+    box-shadow: 0px 0px 25px 1px rgba(255, 255, 0, .5);
+}
+
+.info {
+    position: fixed;
+    z-index: 999;
+    padding: 10px 30px;
+    background-color: rgba(0, 0, 0, .5);
+    color: #fff;
+    border-right: 1px solid rgba(255, 236, 255, .1);
+    border-bottom: 1px solid rgba(255, 236, 255, .1);
 }
 
 @keyframes interference {
