--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     position: relative;
     height: 100vh;
     opacity: .99;
-    animation: interference 5s infinite;
+    animation: interference 25s infinite;
     user-select: none;
 }
 
@@ -123,76 +123,121 @@ body {
     1% {
         opacity: 1;
     }
-    3% {
+    1.2% {
         opacity: .3;
     }
-    4% {
+    1.3% {
         opacity: .8;
     }
-    5% {
+    1.5% {
         opacity: .3;
+    }
+    1.6% {
+        opacity: .8;
+    }
+    1.7% {
+        opacity: .1;
+    }
+    1.8% {
+        opacity: 1;
+    }
+    5.3% {
+        opacity: .7;
+    }
+    5.4% {
+        opacity: .1;
+    }
+    5.5% {
+        opacity: .6;
     }
     6% {
-        opacity: .8;
+        opacity: .2;
+    }
+    6.1% {
+        opacity: 1;
+    }
+    6.2% {
+        opacity: .1;
     }
     7% {
         opacity: .1;
     }
-    8% {
+    7.1% {
         opacity: 1;
     }
-    53% {
-        opacity: .7;
-    }
-    54% {
+    7.2% {
         opacity: .1;
     }
-    55% {
-        opacity: .6;
+    8.1% {
+        opacity: .1;
     }
-    60% {
-        opacity: .2;
-    }
-    61% {
+    8.2% {
         opacity: 1;
     }
-    62% {
+    8.3% {
         opacity: .1;
     }
-    70% {
-        opacity: .1;
-    }
-    71% {
+    8.4% {
         opacity: 1;
     }
-    80% {
+    8.5% {
         opacity: .1;
     }
-    81% {
+    8.6% {
         opacity: .1;
     }
-    82% {
+    8.7% {
         opacity: 1;
     }
-    83% {
+    8.8% {
         opacity: .1;
     }
-    84% {
+    8.9% {
         opacity: 1;
     }
-    85% {
-        opacity: .1;
-    }
-    86% {
-        opacity: .1;
-    }
-    87% {
+    18.4% {
         opacity: 1;
     }
-    88% {
+    18.5% {
         opacity: .1;
     }
-    89% {
+    18.6% {
+        opacity: 1;
+    }
+    28.4% {
+        opacity: 1;
+    }
+    28.5% {
+        opacity: .1;
+    }
+    28.6% {
+        opacity: 1;
+    }
+    28.7% {
+        opacity: 1;
+    }
+    28.8% {
+        opacity: .1;
+    }
+    28.9% {
+        opacity: 1;
+    }
+    29% {
+        opacity: 1;
+    }
+    29.1% {
+        opacity: .1;
+    }
+    29.4% {
+        opacity: 1;
+    }
+    68.4% {
+        opacity: 1;
+    }
+    68.5% {
+        opacity: .1;
+    }
+    68.6% {
         opacity: 1;
     }
 }
